samples/_failures_safe/1761464699_2e17d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9b3b50a.c: In function ‘main’:
./samples/SAFE/__tmp_c9b3b50a.c:157:5: error: expected declaration or statement at end of input
  157 |     printf("Unique words: %d\n\n", unique_count);
      |     ^~~~~~
